<resources>
    <string name="app_name">SkyLine</string>
    <string name="authorization">Авторизация</string>
    <string name="phone">Телефон</string>
    <string name="registration">Регистрация</string>
    <string name="enter_phone_num">Введите номер телефона для входа</string>
    <string name="error_phone_num">Ошибка. Возможно,\n неправильно введен номер</string>
    <string name="pls_enter_pass">Пароль может понадобиться далее</string>
    <string name="enter_pass"><font size="18">Введите пароль</font></string>
    <string name="code_sent">Код отправлен на номер +</string>
    <string name="tint_phone_text">+7(___)___-__-__</string>
    <string name="to_login">Войти</string>
    <string name="welcome">Добро\nпожаловать,\nАртём!</string>
    <string name="not_connected">Ошибка заргузки.\nПроверьте\nподключение к сети</string>
    <string name="tickets_search">Поиск билетов</string>
    <string name="towhere">Куда</string>
    <string name="fromwhere">Откуда</string>
    <string name="nearestTicket">ближайший рейс</string>
    <string name="theBestPrice">лучшая цена</string>
    <string name="delayedTickets">Отложенные\nбилеты (0)</string>
    <string name="choise_Cities">Выберите город</string>
    <string name="profileText">Профиль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="country">Страна</string>
    <string name="Number">Номер</string>
    <string name="Document">Документ</string>
    <string name="Valuta">Валюта</string>
    <string name="RussianFederation">RUS</string>
    <string name="Rub">RUB</string>
    <string name="DocHide">**** ******</string>
    <string name="Logout">Выйти из аккаунта</string>
    <string name="oooskyline">ООО Авиакомпания \"скайлайн\"</string>
    <string name="policy">Политика конфиденциальности</string>
    <string name="aboutCompany">О компании</string>
    <string name="contact">Контакты</string>
    <string name="confirmwithpassword">Подтвердите для внесения изменений</string>
    <string name="passangersandclass">Пассажиры и класс</string>
    <string name="adult">Взрослые</string>
    <string name="adult12">От 12 лет</string>
    <string name="kid">Дети</string>
    <string name="kid212">От 2 до 12 лет</string>
    <string name="child">Младенцы</string>
    <string name="child2">До 2 лет, без места</string>
    <string name="econom">Эконом</string>
    <string name="comfort">Комфорт</string>
    <string name="business">Бизнес</string>
    <string name="thefirstclass">Первый класс</string>
</resources>